html restructure - Jake

--- a/index.html
+++ b/index.html
@@ -1,53 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Firstpage</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="style.css">
-  <title>Firstpage</title>
-</head>
-
-<body>
-  <Header id="title">
-
-    <h1>Super Cool First Page</h1>
-  </Header>
-
-  <div class="box">
-  </div>
-
-
-  <h1 id="second">Designers Matter</h1>
-
-  <img id="image" src="//placehold.it/200x100" alt="">
-
-  <p class="paragraph"><b>Lorem ipsum</b> dolor sit amet consectetur, adipisicing elit. Commodi dolores aliquid quia
-    nesciunt labore quasi
-    ipsum eos nihil laboriosam sed tenetur necessitatibus quidem, doloremque repudiandae! Maiores fuga odit ipsa
-    provident? dolor sit amet consectetur adipisicing elit. Cumque nostrum porro, blanditiis, consequuntur eos
-    provident quod iste incidunt harum et recusandae quisquam repellendus explicabo nemo aspernatur quibusdam?
-    Totam,error at exercitationem, est sunt suscipit laborum. Repudiandae harum modi nemo aut. dolor sit amet
-    consectetur
-    adipisicing elit. Voluptatibus aspernatur voluptatem quia,
-
-    ipsa blanditiis.</p>
-  <p class="paragraph" id="two"><b>Lorem ipsum</b> dolor sit amet consectetur adipisicing elit. Vel culpa quas non quos
-    et
-    numquam saepe earum amet
-    error at exercitationem, est sunt suscipit laborum. Repudiandae harum modi nemo aut. dolor sit amet consectetur
-    adipisicing elit. Voluptatibus aspernatur voluptatem quia,
-    consectetur alias, itaque ipsum ducimus cumque cum dolor ratione hic iure accusantium quibusdam, iusto ut quasi.
-    Ea,error at exercitationem, est sunt suscipit laborum. Repudiandae harum modi nemo aut. dolor sit amet consectetur
-    adipisicing elit. Voluptatibus aspernatur voluptatem quia,
-    neque!
-  </p>
-
-  <footer id="footer">
-
-  </footer>
-</body>
-
-
+  <body>
+    <header class="text-center">
+      <h1>Super Cool First Page</h1>
+    </header>
+    <main>
+      <article>
+        <div class="box"></div>
+        <h1 class="text-center">Designers Matter</h1>
+        <p class="paragraph">
+          <b>Lorem ipsum</b> dolor sit amet consectetur, adipisicing elit.
+          Commodi dolores aliquid quia nesciunt labore quasi ipsum eos nihil
+          laboriosam sed tenetur necessitatibus quidem, doloremque repudiandae!
+          Maiores fuga odit ipsa provident? dolor sit amet consectetur
+          adipisicing elit. Cumque nostrum porro, blanditiis, consequuntur eos
+          provident quod iste incidunt harum et recusandae quisquam repellendus
+          explicabo nemo aspernatur quibusdam? Totam,error at exercitationem,
+          est sunt suscipit laborum. Repudiandae harum modi nemo aut. dolor sit
+          amet consectetur adipisicing elit. Voluptatibus aspernatur voluptatem
+          quia, ipsa blanditiis.
+        </p>
+        <p class="paragraph">
+          <b>Lorem ipsum</b> dolor sit amet consectetur adipisicing elit. Vel
+          culpa quas non quos et numquam saepe earum amet error at
+          exercitationem, est sunt suscipit laborum. Repudiandae harum modi nemo
+          aut. dolor sit amet consectetur adipisicing elit. Voluptatibus
+          aspernatur voluptatem quia, consectetur alias, itaque ipsum ducimus
+          cumque cum dolor ratione hic iure accusantium quibusdam, iusto ut
+          quasi. Ea,error at exercitationem, est sunt suscipit laborum.
+          Repudiandae harum modi nemo aut. dolor sit amet consectetur
+          adipisicing elit. Voluptatibus aspernatur voluptatem quia, neque!
+        </p>
+      </article>
+      <aside>
+        <div class="related-article">
+          <img src="//placehold.it/200x100" alt="" />
+          <h4>Title of Related</h4>
+          <p>Test Text to see if this works</p>
+        </div>
+        <div class="related-article">
+          <img src="//placehold.it/200x100" alt="" />
+          <h4>Title of Related</h4>
+          <p>Test Text to see if this works</p>
+        </div>
+        <div class="related-article">
+          <img src="//placehold.it/200x100" alt="" />
+          <h4>Title of Related</h4>
+          <p>Test Text to see if this works</p>
+        </div>
+      </aside>
+    </main>
+    <footer id="footer"></footer>
+  </body>
 </html>
